--- a/pkgsinfo/apps/Office2011/Office2011_update-14.5.3.plist
+++ b/pkgsinfo/apps/Office2011/Office2011_update-14.5.3.plist
@@ -48,6 +48,8 @@
 		<string>testing</string>
 		<string>production</string>
 	</array>
+	<key>category</key>
+	<string>Office</string>
 	<key>description</key>
 	<string>&lt;html&gt;&lt;p&gt;This update improves security. It includes fixes for vulnerabilities that an attacker can use to overwrite the contents of your computer's memory with malicious code.&lt;/p&gt;
 
@@ -57,6 +59,8 @@
 
 &lt;p&gt;For additional assistance, or to obtain a downloadable version of this update, visit the &lt;a href="http://go.microsoft.com/fwlink/?LinkId=216459" target="_blank"&gt;Microsoft Web site&lt;/a&gt;.&lt;/p&gt;
 &lt;/html&gt;</string>
+	<key>developer</key>
+	<string>Microsoft</string>
 	<key>display_name</key>
 	<string>Office 2011 14.5.3 Update</string>
 	<key>installed_size</key>
