--- a/pkgsinfo/apps/Audacity/Audacity-2.1.1.0.plist
+++ b/pkgsinfo/apps/Audacity/Audacity-2.1.1.0.plist
@@ -7,7 +7,7 @@
 		<key>created_by</key>
 		<string>aanklewicz</string>
 		<key>creation_date</key>
-		<date>2015-07-21T21:51:20Z</date>
+		<date>2015-07-23T13:16:54Z</date>
 		<key>munki_version</key>
 		<string>2.2.4.2431</string>
 		<key>os_version</key>
@@ -21,36 +21,34 @@
 		<string>production</string>
 	</array>
 	<key>category</key>
-	<string>Internet Browsers</string>
+	<string>Multimedia</string>
 	<key>description</key>
-	<string>Chrome is a fast, simple, and secure web browser, built for the modern web.</string>
+	<string>Audacity is a free, easy-to-use, multi-track audio editor and recorder for Windows, Mac OS X, GNU/Linux and other operating systems.</string>
 	<key>developer</key>
-	<string>Google</string>
+	<string>The Audacity Team</string>
 	<key>display_name</key>
-	<string>Google Chrome</string>
+	<string>Audacity</string>
 	<key>installer_item_hash</key>
-	<string>32a2a709fe07c8a433b08fc0996bc2b0b284f94422cbb590d3b8586d1d773d3a</string>
+	<string>266fa1b2f3aff3894730a8b0e9fcf5c24c93e726f15180855d2516c5c44de10e</string>
 	<key>installer_item_location</key>
-	<string>apps/GoogleChrome-44.0.2403.89.dmg</string>
+	<string>apps/Audacity/audacity-macosx-ub-2.1.1-2.1.1.0.dmg</string>
 	<key>installer_item_size</key>
-	<integer>64653</integer>
+	<integer>36131</integer>
 	<key>installer_type</key>
 	<string>copy_from_dmg</string>
 	<key>installs</key>
 	<array>
 		<dict>
 			<key>CFBundleIdentifier</key>
-			<string>com.google.Chrome</string>
+			<string>net.sourceforge.audacity</string>
 			<key>CFBundleName</key>
-			<string>Chrome</string>
+			<string>Audacity</string>
 			<key>CFBundleShortVersionString</key>
-			<string>44.0.2403.89</string>
+			<string>2.1.1.0</string>
 			<key>CFBundleVersion</key>
-			<string>2403.89</string>
-			<key>minosversion</key>
-			<string>10.6.0</string>
+			<string>2.1.1.0</string>
 			<key>path</key>
-			<string>/Applications/Google Chrome.app</string>
+			<string>/Applications/Audacity/Audacity.app</string>
 			<key>type</key>
 			<string>application</string>
 			<key>version_comparison_key</key>
@@ -63,13 +61,13 @@
 			<key>destination_path</key>
 			<string>/Applications</string>
 			<key>source_item</key>
-			<string>Google Chrome.app</string>
+			<string>Audacity</string>
 		</dict>
 	</array>
 	<key>minimum_os_version</key>
-	<string>10.6.0</string>
+	<string>10.4.0</string>
 	<key>name</key>
-	<string>GoogleChrome</string>
+	<string>Audacity</string>
 	<key>unattended_install</key>
 	<true/>
 	<key>uninstall_method</key>
@@ -77,6 +75,6 @@
 	<key>uninstallable</key>
 	<true/>
 	<key>version</key>
-	<string>44.0.2403.89</string>
+	<string>2.1.1.0</string>
 </dict>
 </plist>
