--- a/pkgsinfo/apps/Skype-7.10.0.777.plist
+++ b/pkgsinfo/apps/Skype-7.10.0.777.plist
@@ -7,7 +7,7 @@
 		<key>created_by</key>
 		<string>aanklewicz</string>
 		<key>creation_date</key>
-		<date>2015-07-21T21:51:20Z</date>
+		<date>2015-08-06T13:28:25Z</date>
 		<key>munki_version</key>
 		<string>2.2.4.2431</string>
 		<key>os_version</key>
@@ -18,43 +18,40 @@
 	<key>catalogs</key>
 	<array>
 		<string>testing</string>
-		<string>production</string>
 	</array>
 	<key>category</key>
-	<string>Internet Browsers</string>
+	<string>Communication</string>
 	<key>description</key>
-	<string>Chrome is a fast, simple, and secure web browser, built for the modern web.</string>
+	<string>Calling, seeing, messaging and sharing with others – wherever they are.</string>
 	<key>developer</key>
-	<string>Google</string>
+	<string>Microsoft</string>
 	<key>display_name</key>
-	<string>Google Chrome</string>
+	<string>Skype</string>
 	<key>installer_item_hash</key>
-	<string>32a2a709fe07c8a433b08fc0996bc2b0b284f94422cbb590d3b8586d1d773d3a</string>
+	<string>09bf4e2d8cf724f3f0e63559c85657a91c193221510a98d5e2a4f6c4b2f46dbe</string>
 	<key>installer_item_location</key>
-	<string>apps/GoogleChrome-44.0.2403.89.dmg</string>
+	<string>apps/Skype-7.10.0.777.dmg</string>
 	<key>installer_item_size</key>
-	<integer>64653</integer>
+	<integer>41993</integer>
 	<key>installer_type</key>
 	<string>copy_from_dmg</string>
 	<key>installs</key>
 	<array>
 		<dict>
 			<key>CFBundleIdentifier</key>
-			<string>com.google.Chrome</string>
-			<key>CFBundleName</key>
-			<string>Chrome</string>
+			<string>com.skype.skype</string>
 			<key>CFBundleShortVersionString</key>
-			<string>44.0.2403.89</string>
+			<string>7.10</string>
 			<key>CFBundleVersion</key>
-			<string>2403.89</string>
+			<string>7.10.0.777</string>
 			<key>minosversion</key>
-			<string>10.6.0</string>
+			<string>10.9</string>
 			<key>path</key>
-			<string>/Applications/Google Chrome.app</string>
+			<string>/Applications/Skype.app</string>
 			<key>type</key>
 			<string>application</string>
 			<key>version_comparison_key</key>
-			<string>CFBundleShortVersionString</string>
+			<string>CFBundleVersion</string>
 		</dict>
 	</array>
 	<key>items_to_copy</key>
@@ -63,13 +60,13 @@
 			<key>destination_path</key>
 			<string>/Applications</string>
 			<key>source_item</key>
-			<string>Google Chrome.app</string>
+			<string>Skype.app</string>
 		</dict>
 	</array>
 	<key>minimum_os_version</key>
-	<string>10.6.0</string>
+	<string>10.9</string>
 	<key>name</key>
-	<string>GoogleChrome</string>
+	<string>Skype</string>
 	<key>unattended_install</key>
 	<true/>
 	<key>uninstall_method</key>
@@ -77,6 +74,6 @@
 	<key>uninstallable</key>
 	<true/>
 	<key>version</key>
-	<string>44.0.2403.89</string>
+	<string>7.10.0.777</string>
 </dict>
 </plist>
