--- a/pkgsinfo/apps/firefox/Firefox-39.0.3.plist
+++ b/pkgsinfo/apps/firefox/Firefox-39.0.3.plist
@@ -7,9 +7,9 @@
 		<key>created_by</key>
 		<string>aanklewicz</string>
 		<key>creation_date</key>
-		<date>2015-08-06T13:34:10Z</date>
+		<date>2015-08-10T13:06:00Z</date>
 		<key>munki_version</key>
-		<string>2.2.4.2431</string>
+		<string>2.3.0.2517</string>
 		<key>os_version</key>
 		<string>10.10.4</string>
 	</dict>
@@ -23,34 +23,34 @@
 	<key>category</key>
 	<string>Internet Browsers</string>
 	<key>description</key>
-	<string>Opera products enable more than 350 million internet consumers to discover and connect with the content and services that matter most to them, no matter what device, network or location. In turn, we help advertisers reach the audiences that build value for their businesses. Opera also delivers products and services to more than 120 operators around the world, enabling them to provide a faster, more economical and better network experience to their subscribers.</string>
+	<string>Mozilla Firefox is a free and open source web browser.</string>
 	<key>developer</key>
-	<string>Opera Software Asa</string>
+	<string>Mozilla</string>
 	<key>display_name</key>
-	<string>Opera</string>
+	<string>Mozilla Firefox</string>
 	<key>installer_item_hash</key>
-	<string>607a7050f3c7114798946a185cafefc716a0ec2a8e2bd0820f63998ecf58e4f2</string>
+	<string>4223628545ea8c4eb661617c9a53561843a71aa61ef15a177e4f5cea08ca628b</string>
 	<key>installer_item_location</key>
-	<string>apps/Opera/Opera-31.0.dmg</string>
+	<string>apps/firefox/Firefox-39.0.3.dmg</string>
 	<key>installer_item_size</key>
-	<integer>53089</integer>
+	<integer>74858</integer>
 	<key>installer_type</key>
 	<string>copy_from_dmg</string>
 	<key>installs</key>
 	<array>
 		<dict>
 			<key>CFBundleIdentifier</key>
-			<string>com.operasoftware.Opera</string>
+			<string>org.mozilla.firefox</string>
 			<key>CFBundleName</key>
-			<string>Opera</string>
+			<string>Firefox</string>
 			<key>CFBundleShortVersionString</key>
-			<string>31.0</string>
+			<string>39.0.3</string>
 			<key>CFBundleVersion</key>
-			<string>31.0.1889.99</string>
+			<string>3915.8.6</string>
 			<key>minosversion</key>
-			<string>10.7.0</string>
+			<string>10.6</string>
 			<key>path</key>
-			<string>/Applications/Opera.app</string>
+			<string>/Applications/Firefox.app</string>
 			<key>type</key>
 			<string>application</string>
 			<key>version_comparison_key</key>
@@ -63,13 +63,13 @@
 			<key>destination_path</key>
 			<string>/Applications</string>
 			<key>source_item</key>
-			<string>Opera.app</string>
+			<string>Firefox.app</string>
 		</dict>
 	</array>
 	<key>minimum_os_version</key>
-	<string>10.7.0</string>
+	<string>10.6</string>
 	<key>name</key>
-	<string>Opera</string>
+	<string>Firefox</string>
 	<key>unattended_install</key>
 	<true/>
 	<key>uninstall_method</key>
@@ -77,6 +77,6 @@
 	<key>uninstallable</key>
 	<true/>
 	<key>version</key>
-	<string>31.0</string>
+	<string>39.0.3</string>
 </dict>
 </plist>
