--- a/pkgsinfo/apps/firefox/Firefox-40.0.plist
+++ b/pkgsinfo/apps/firefox/Firefox-40.0.plist
@@ -7,9 +7,9 @@
 		<key>created_by</key>
 		<string>aanklewicz</string>
 		<key>creation_date</key>
-		<date>2015-08-06T13:25:57Z</date>
+		<date>2015-08-12T13:01:44Z</date>
 		<key>munki_version</key>
-		<string>2.2.4.2431</string>
+		<string>2.3.0.2517</string>
 		<key>os_version</key>
 		<string>10.10.4</string>
 	</dict>
@@ -18,39 +18,38 @@
 	<key>catalogs</key>
 	<array>
 		<string>testing</string>
-		<string>production</string>
 	</array>
 	<key>category</key>
 	<string>Internet Browsers</string>
 	<key>description</key>
-	<string>Chrome is a fast, simple, and secure web browser, built for the modern web.</string>
+	<string>Mozilla Firefox is a free and open source web browser.</string>
 	<key>developer</key>
-	<string>Google</string>
+	<string>Mozilla</string>
 	<key>display_name</key>
-	<string>Google Chrome</string>
+	<string>Mozilla Firefox</string>
 	<key>installer_item_hash</key>
-	<string>fad7204653d65c4e567ea2979747726cd1bd05b8c73264b69c660947e457e57d</string>
+	<string>e7cb59924e6ca4b79426da224204ed2e0dac7804f0a29a33299370c7e73341a5</string>
 	<key>installer_item_location</key>
-	<string>apps/GoogleChrome-44.0.2403.130.dmg</string>
+	<string>apps/firefox/Firefox-40.0.dmg</string>
 	<key>installer_item_size</key>
-	<integer>64659</integer>
+	<integer>75585</integer>
 	<key>installer_type</key>
 	<string>copy_from_dmg</string>
 	<key>installs</key>
 	<array>
 		<dict>
 			<key>CFBundleIdentifier</key>
-			<string>com.google.Chrome</string>
+			<string>org.mozilla.firefox</string>
 			<key>CFBundleName</key>
-			<string>Chrome</string>
+			<string>Firefox</string>
 			<key>CFBundleShortVersionString</key>
-			<string>44.0.2403.130</string>
+			<string>40.0</string>
 			<key>CFBundleVersion</key>
-			<string>2403.130</string>
+			<string>4015.8.7</string>
 			<key>minosversion</key>
-			<string>10.6.0</string>
+			<string>10.6</string>
 			<key>path</key>
-			<string>/Applications/Google Chrome.app</string>
+			<string>/Applications/Firefox.app</string>
 			<key>type</key>
 			<string>application</string>
 			<key>version_comparison_key</key>
@@ -63,13 +62,13 @@
 			<key>destination_path</key>
 			<string>/Applications</string>
 			<key>source_item</key>
-			<string>Google Chrome.app</string>
+			<string>Firefox.app</string>
 		</dict>
 	</array>
 	<key>minimum_os_version</key>
-	<string>10.6.0</string>
+	<string>10.6</string>
 	<key>name</key>
-	<string>GoogleChrome</string>
+	<string>Firefox</string>
 	<key>unattended_install</key>
 	<true/>
 	<key>uninstall_method</key>
@@ -77,6 +76,6 @@
 	<key>uninstallable</key>
 	<true/>
 	<key>version</key>
-	<string>44.0.2403.130</string>
+	<string>40.0</string>
 </dict>
 </plist>
