AutoPKG run, Adding UnRAR, Adding CPCTE01 computer

--- a/pkgsinfo/munkitools/munkitools-4.1.2518.plist
+++ b/pkgsinfo/munkitools/munkitools-4.1.2518.plist
@@ -19,6 +19,7 @@
 	<array>
 		<string>development</string>
 		<string>production</string>
+		<string>testing</string>
 	</array>
 	<key>category</key>
 	<string>Information Technology</string>
