--- a/pkgsinfo/munkitools/munkitools_admin-2.3.0.2519.plist
+++ b/pkgsinfo/munkitools/munkitools_admin-2.3.0.2519.plist
@@ -19,6 +19,7 @@
 	<array>
 		<string>development</string>
 		<string>production</string>
+		<string>testing</string>
 	</array>
 	<key>category</key>
 	<string>Information Technology</string>
