--- a/pkgsinfo/apps/CPC Old Open Office Removal.plist
+++ b/pkgsinfo/apps/CPC Old Open Office Removal.plist
@@ -25,7 +25,7 @@
 	<key>description</key>
 	<string>Removes Old OpenOffice.org Client from Macs.</string>
 	<key>developer</key>
-	<string>Crestwood</string>
+	<string>Crestwood Prep</string>
 	<key>display_name</key>
 	<string>OpenOffice.org Removal</string>
 	<key>icon_name</key>
