--- a/pkgsinfo/apps/CPC FirstClass Removal.plist
+++ b/pkgsinfo/apps/CPC FirstClass Removal.plist
@@ -25,7 +25,7 @@
 	<key>description</key>
 	<string>Removes FirstClass Client from Macs.</string>
 	<key>developer</key>
-	<string>Crestwood</string>
+	<string>Crestwood Prep</string>
 	<key>display_name</key>
 	<string>First Class Removal</string>
 	<key>installcheck_script</key>
