--- a/pkgsinfo/apps/GameSalad/GameSalad-0.13.40.plist
+++ b/pkgsinfo/apps/GameSalad/GameSalad-0.13.40.plist
@@ -5,9 +5,9 @@
 	<key>_metadata</key>
 	<dict>
 		<key>created_by</key>
-		<string>root</string>
+		<string>aanklewicz</string>
 		<key>creation_date</key>
-		<date>2015-09-16T12:49:49Z</date>
+		<date>2015-09-17T23:29:27Z</date>
 		<key>munki_version</key>
 		<string>2.3.0.2519</string>
 		<key>os_version</key>
@@ -17,42 +17,40 @@
 	<false/>
 	<key>catalogs</key>
 	<array>
-		<string>production</string>
 		<string>testing</string>
+		<string>production</string>
 	</array>
 	<key>category</key>
-	<string>Multimedia</string>
+	<string>Development</string>
 	<key>description</key>
-	<string>Live Television production</string>
+	<string>If you want to make games, what are you waiting for? With GameSalad Creator you can learn the basics and start making games in about an hour. That’s right. You can make your first game in about an hour.</string>
 	<key>developer</key>
-	<string>Boinx</string>
+	<string>GameSalad Inc.</string>
 	<key>display_name</key>
-	<string>BoinxTV</string>
-	<key>icon_hash</key>
-	<string>6d3d03a7401734562a6b3fda53a4d2cb6ab89274e7c2875102dfbc7a31a10277</string>
+	<string>GameSalad</string>
 	<key>installer_item_hash</key>
-	<string>8daa9a2f93d0a4305a231097505d6ee3a1781281adab48f219fa12976154c579</string>
+	<string>e9a28771479e1581bda4cd66d7b64fcadc463d5010de5e66f2ceac4c71be9606</string>
 	<key>installer_item_location</key>
-	<string>apps/BoinxTV-1.9.12.dmg</string>
+	<string>apps/GameSalad/GameSalad-0.13.40.dmg</string>
 	<key>installer_item_size</key>
-	<integer>52011</integer>
+	<integer>31555</integer>
 	<key>installer_type</key>
 	<string>copy_from_dmg</string>
 	<key>installs</key>
 	<array>
 		<dict>
 			<key>CFBundleIdentifier</key>
-			<string>com.boinx.BoinxTV</string>
+			<string>com.gendaigames.GameSalad</string>
 			<key>CFBundleName</key>
-			<string>BoinxTV</string>
+			<string>GameSalad</string>
 			<key>CFBundleShortVersionString</key>
-			<string>1.9.12</string>
+			<string>0.13.40</string>
 			<key>CFBundleVersion</key>
-			<string>17142</string>
+			<string>0.13.40</string>
 			<key>minosversion</key>
-			<string>10.6.8</string>
+			<string>10.7.0</string>
 			<key>path</key>
-			<string>/Applications/BoinxTV.app</string>
+			<string>/Applications/GameSalad.app</string>
 			<key>type</key>
 			<string>application</string>
 			<key>version_comparison_key</key>
@@ -65,18 +63,20 @@
 			<key>destination_path</key>
 			<string>/Applications</string>
 			<key>source_item</key>
-			<string>BoinxTV.app</string>
+			<string>GameSalad.app</string>
 		</dict>
 	</array>
 	<key>minimum_os_version</key>
-	<string>10.6.8</string>
+	<string>10.7.0</string>
 	<key>name</key>
-	<string>BoinxTV</string>
+	<string>GameSalad</string>
+	<key>unattended_install</key>
+	<true/>
 	<key>uninstall_method</key>
 	<string>remove_copied_items</string>
 	<key>uninstallable</key>
 	<true/>
 	<key>version</key>
-	<string>1.9.12</string>
+	<string>0.13.40</string>
 </dict>
 </plist>
