--- a/pkgsinfo/munkitools/munkitools-4.1.2531.plist
+++ b/pkgsinfo/munkitools/munkitools-4.1.2531.plist
@@ -19,6 +19,7 @@
 	<array>
 		<string>development</string>
 		<string>testing</string>
+		<string>production</string>
 	</array>
 	<key>category</key>
 	<string>Utilities</string>
