--- a/pkgsinfo/apps/GoogleChrome-45.0.2454.101.plist
+++ b/pkgsinfo/apps/GoogleChrome-45.0.2454.101.plist
@@ -7,7 +7,7 @@
 		<key>created_by</key>
 		<string>aanklewicz</string>
 		<key>creation_date</key>
-		<date>2015-09-22T20:31:15Z</date>
+		<date>2015-09-29T13:23:31Z</date>
 		<key>munki_version</key>
 		<string>2.3.0.2519</string>
 		<key>os_version</key>
@@ -23,34 +23,34 @@
 	<key>category</key>
 	<string>Internet Browsers</string>
 	<key>description</key>
-	<string>Mozilla Firefox is a free and open source web browser.</string>
+	<string>Chrome is a fast, simple, and secure web browser, built for the modern web.</string>
 	<key>developer</key>
-	<string>Mozilla</string>
+	<string>Google</string>
 	<key>display_name</key>
-	<string>Mozilla Firefox</string>
+	<string>Google Chrome</string>
 	<key>installer_item_hash</key>
-	<string>e3317d398d4d8ac8dcde5b04c22da1e2881fcd061d8a88f73a2a3eac5c329211</string>
+	<string>2e28d127427f3ad68fca14e71eb24af2373d1548dfcaee2f10b0814183bf051f</string>
 	<key>installer_item_location</key>
-	<string>apps/firefox/Firefox-41.0.dmg</string>
+	<string>apps/GoogleChrome-45.0.2454.101.dmg</string>
 	<key>installer_item_size</key>
-	<integer>77014</integer>
+	<integer>63472</integer>
 	<key>installer_type</key>
 	<string>copy_from_dmg</string>
 	<key>installs</key>
 	<array>
 		<dict>
 			<key>CFBundleIdentifier</key>
-			<string>org.mozilla.firefox</string>
+			<string>com.google.Chrome</string>
 			<key>CFBundleName</key>
-			<string>Firefox</string>
+			<string>Chrome</string>
 			<key>CFBundleShortVersionString</key>
-			<string>41.0</string>
+			<string>45.0.2454.101</string>
 			<key>CFBundleVersion</key>
-			<string>4115.9.17</string>
+			<string>2454.101</string>
 			<key>minosversion</key>
-			<string>10.6</string>
+			<string>10.6.0</string>
 			<key>path</key>
-			<string>/Applications/Firefox.app</string>
+			<string>/Applications/Google Chrome.app</string>
 			<key>type</key>
 			<string>application</string>
 			<key>version_comparison_key</key>
@@ -63,13 +63,13 @@
 			<key>destination_path</key>
 			<string>/Applications</string>
 			<key>source_item</key>
-			<string>Firefox.app</string>
+			<string>Google Chrome.app</string>
 		</dict>
 	</array>
 	<key>minimum_os_version</key>
-	<string>10.6</string>
+	<string>10.6.0</string>
 	<key>name</key>
-	<string>Firefox</string>
+	<string>GoogleChrome</string>
 	<key>unattended_install</key>
 	<true/>
 	<key>uninstall_method</key>
@@ -77,6 +77,6 @@
 	<key>uninstallable</key>
 	<true/>
 	<key>version</key>
-	<string>41.0</string>
+	<string>45.0.2454.101</string>
 </dict>
 </plist>
