--- a/pkgsinfo/apps/Silverlight-5.1.40905.0.plist
+++ b/pkgsinfo/apps/Silverlight-5.1.40905.0.plist
@@ -7,7 +7,7 @@
 		<key>created_by</key>
 		<string>aanklewicz</string>
 		<key>creation_date</key>
-		<date>2015-09-22T20:39:28Z</date>
+		<date>2015-09-30T18:33:49Z</date>
 		<key>munki_version</key>
 		<string>2.3.0.2519</string>
 		<key>os_version</key>
@@ -17,46 +17,39 @@
 	<false/>
 	<key>catalogs</key>
 	<array>
-		<string>development</string>
 		<string>testing</string>
 		<string>production</string>
 	</array>
 	<key>category</key>
-	<string>Utilities</string>
+	<string>Multimedia</string>
 	<key>description</key>
-	<string>Core command-line tools used by Managed Software Center.</string>
+	<string>Microsoft Silverlight is a free web-browser plug-in that enables interactive media experiences, rich business applications and immersive mobile apps.</string>
 	<key>developer</key>
-	<string>The Munki Team</string>
+	<string>Microsoft</string>
 	<key>display_name</key>
-	<string>Managed Software Center core tools</string>
-	<key>icon_name</key>
-	<string>munkitools.png</string>
+	<string>Microsoft Silverlight</string>
 	<key>installed_size</key>
-	<integer>643</integer>
+	<integer>35672</integer>
 	<key>installer_item_hash</key>
-	<string>be394094960a9c306bff36fc4e4df407a511c62824fa823cc0a89186f5e47fbf</string>
+	<string>8e991211164f8ff66f6a4fdc257c1fa3045f8dd599611cdbbd821e95f534efee</string>
 	<key>installer_item_location</key>
-	<string>munkitools/munkitools_core-2.3.1.2535.pkg</string>
+	<string>apps/Silverlight-5.1.40905.0.dmg</string>
 	<key>installer_item_size</key>
-	<integer>144</integer>
+	<integer>14344</integer>
 	<key>minimum_os_version</key>
-	<string>10.6.0</string>
+	<string>10.5.0</string>
 	<key>name</key>
-	<string>munkitools_core</string>
+	<string>Silverlight</string>
 	<key>receipts</key>
 	<array>
 		<dict>
 			<key>installed_size</key>
-			<integer>643</integer>
+			<integer>35672</integer>
 			<key>packageid</key>
-			<string>com.googlecode.munki.core</string>
+			<string>com.microsoft.silverlight.plugin</string>
 			<key>version</key>
-			<string>2.3.1.2535</string>
+			<string>5.1.40905.0</string>
 		</dict>
-	</array>
-	<key>requires</key>
-	<array>
-		<string>munkitools_launchd</string>
 	</array>
 	<key>unattended_install</key>
 	<true/>
@@ -65,6 +58,6 @@
 	<key>uninstallable</key>
 	<true/>
 	<key>version</key>
-	<string>2.3.1.2535</string>
+	<string>5.1.40905.0</string>
 </dict>
 </plist>
