--- a/pkgsinfo/apps/Skype-7.13.0.428.plist
+++ b/pkgsinfo/apps/Skype-7.13.0.428.plist
@@ -7,7 +7,7 @@
 		<key>created_by</key>
 		<string>aanklewicz</string>
 		<key>creation_date</key>
-		<date>2015-09-22T20:31:15Z</date>
+		<date>2015-09-30T18:29:20Z</date>
 		<key>munki_version</key>
 		<string>2.3.0.2519</string>
 		<key>os_version</key>
@@ -21,40 +21,38 @@
 		<string>production</string>
 	</array>
 	<key>category</key>
-	<string>Internet Browsers</string>
+	<string>Communication</string>
 	<key>description</key>
-	<string>Mozilla Firefox is a free and open source web browser.</string>
+	<string>Calling, seeing, messaging and sharing with others – wherever they are.</string>
 	<key>developer</key>
-	<string>Mozilla</string>
+	<string>Microsoft</string>
 	<key>display_name</key>
-	<string>Mozilla Firefox</string>
+	<string>Skype</string>
 	<key>installer_item_hash</key>
-	<string>e3317d398d4d8ac8dcde5b04c22da1e2881fcd061d8a88f73a2a3eac5c329211</string>
+	<string>91b0a66a710a2a4fd32c1a8bacce3481d11d4e220265189fa61d644cd983b6a9</string>
 	<key>installer_item_location</key>
-	<string>apps/firefox/Firefox-41.0.dmg</string>
+	<string>apps/Skype-7.13.0.428.dmg</string>
 	<key>installer_item_size</key>
-	<integer>77014</integer>
+	<integer>39692</integer>
 	<key>installer_type</key>
 	<string>copy_from_dmg</string>
 	<key>installs</key>
 	<array>
 		<dict>
 			<key>CFBundleIdentifier</key>
-			<string>org.mozilla.firefox</string>
-			<key>CFBundleName</key>
-			<string>Firefox</string>
+			<string>com.skype.skype</string>
 			<key>CFBundleShortVersionString</key>
-			<string>41.0</string>
+			<string>7.13</string>
 			<key>CFBundleVersion</key>
-			<string>4115.9.17</string>
+			<string>7.13.0.428</string>
 			<key>minosversion</key>
-			<string>10.6</string>
+			<string>10.9</string>
 			<key>path</key>
-			<string>/Applications/Firefox.app</string>
+			<string>/Applications/Skype.app</string>
 			<key>type</key>
 			<string>application</string>
 			<key>version_comparison_key</key>
-			<string>CFBundleShortVersionString</string>
+			<string>CFBundleVersion</string>
 		</dict>
 	</array>
 	<key>items_to_copy</key>
@@ -63,13 +61,13 @@
 			<key>destination_path</key>
 			<string>/Applications</string>
 			<key>source_item</key>
-			<string>Firefox.app</string>
+			<string>Skype.app</string>
 		</dict>
 	</array>
 	<key>minimum_os_version</key>
-	<string>10.6</string>
+	<string>10.9</string>
 	<key>name</key>
-	<string>Firefox</string>
+	<string>Skype</string>
 	<key>unattended_install</key>
 	<true/>
 	<key>uninstall_method</key>
@@ -77,6 +75,6 @@
 	<key>uninstallable</key>
 	<true/>
 	<key>version</key>
-	<string>41.0</string>
+	<string>7.13.0.428</string>
 </dict>
 </plist>
