--- a/pkgsinfo/apps/TheUnarchiver-3.10.1.plist
+++ b/pkgsinfo/apps/TheUnarchiver-3.10.1.plist
@@ -7,7 +7,7 @@
 		<key>created_by</key>
 		<string>aanklewicz</string>
 		<key>creation_date</key>
-		<date>2015-09-22T20:31:15Z</date>
+		<date>2015-09-29T13:28:08Z</date>
 		<key>munki_version</key>
 		<string>2.3.0.2519</string>
 		<key>os_version</key>
@@ -21,36 +21,36 @@
 		<string>production</string>
 	</array>
 	<key>category</key>
-	<string>Internet Browsers</string>
+	<string>Utilities</string>
 	<key>description</key>
-	<string>Mozilla Firefox is a free and open source web browser.</string>
+	<string>The Unarchiver is a much more capable replacement for "Archive Utility.app", the built-in archive unpacker program on Mac OS X. The Unarchiver is designed to handle many more formats than Archive Utility, and to better fit in with the design of the Finder.</string>
 	<key>developer</key>
-	<string>Mozilla</string>
+	<string>Dag Ågren</string>
 	<key>display_name</key>
-	<string>Mozilla Firefox</string>
+	<string>The Unarchiver</string>
 	<key>installer_item_hash</key>
-	<string>e3317d398d4d8ac8dcde5b04c22da1e2881fcd061d8a88f73a2a3eac5c329211</string>
+	<string>072490c2164f3d2003f15a63f0c6fb34bf9aedeb0b782e4f926b729112a4b8cf</string>
 	<key>installer_item_location</key>
-	<string>apps/firefox/Firefox-41.0.dmg</string>
+	<string>apps/TheUnarchiver-3.10.1.dmg</string>
 	<key>installer_item_size</key>
-	<integer>77014</integer>
+	<integer>6242</integer>
 	<key>installer_type</key>
 	<string>copy_from_dmg</string>
 	<key>installs</key>
 	<array>
 		<dict>
 			<key>CFBundleIdentifier</key>
-			<string>org.mozilla.firefox</string>
+			<string>cx.c3.theunarchiver</string>
 			<key>CFBundleName</key>
-			<string>Firefox</string>
+			<string>The Unarchiver</string>
 			<key>CFBundleShortVersionString</key>
-			<string>41.0</string>
+			<string>3.10.1</string>
 			<key>CFBundleVersion</key>
-			<string>4115.9.17</string>
+			<string>103</string>
 			<key>minosversion</key>
-			<string>10.6</string>
+			<string>10.6.0</string>
 			<key>path</key>
-			<string>/Applications/Firefox.app</string>
+			<string>/Applications/The Unarchiver.app</string>
 			<key>type</key>
 			<string>application</string>
 			<key>version_comparison_key</key>
@@ -63,13 +63,13 @@
 			<key>destination_path</key>
 			<string>/Applications</string>
 			<key>source_item</key>
-			<string>Firefox.app</string>
+			<string>The Unarchiver.app</string>
 		</dict>
 	</array>
 	<key>minimum_os_version</key>
-	<string>10.6</string>
+	<string>10.7.0</string>
 	<key>name</key>
-	<string>Firefox</string>
+	<string>TheUnarchiver</string>
 	<key>unattended_install</key>
 	<true/>
 	<key>uninstall_method</key>
@@ -77,6 +77,6 @@
 	<key>uninstallable</key>
 	<true/>
 	<key>version</key>
-	<string>41.0</string>
+	<string>3.10.1</string>
 </dict>
 </plist>
