--- a/pkgsinfo/munkitools/munkitools_admin-2.3.1.2535.plist
+++ b/pkgsinfo/munkitools/munkitools_admin-2.3.1.2535.plist
@@ -19,6 +19,7 @@
 	<array>
 		<string>development</string>
 		<string>testing</string>
+		<string>production</string>
 	</array>
 	<key>category</key>
 	<string>Utilities</string>
