AutoPKG run, adding Phil's comptuer

--- a/pkgsinfo/apps/1Password-5.4.1.plist
+++ b/pkgsinfo/apps/1Password-5.4.1.plist
@@ -7,50 +7,55 @@
 		<key>created_by</key>
 		<string>aanklewicz</string>
 		<key>creation_date</key>
-		<date>2015-10-05T18:04:23Z</date>
+		<date>2015-10-26T20:04:39Z</date>
 		<key>munki_version</key>
 		<string>2.3.1.2535</string>
 		<key>os_version</key>
-		<string>10.10.5</string>
+		<string>10.11</string>
 	</dict>
 	<key>autoremove</key>
 	<false/>
+	<key>blocking_applications</key>
+	<array>
+		<string>1Password</string>
+		<string>1Password mini</string>
+	</array>
 	<key>catalogs</key>
 	<array>
 		<string>testing</string>
 		<string>production</string>
 	</array>
 	<key>category</key>
-	<string>Email</string>
+	<string>Utilities</string>
 	<key>description</key>
-	<string>Mozilla Thunderbird is a free and open source mail client.</string>
+	<string>1Password is a password manager that goes beyond simple password storage by integrating directly with your web browser to automatically log you into websites, enter credit card information, fill registration forms, and easily generate strong passwords.</string>
 	<key>developer</key>
-	<string>Mozilla</string>
+	<string>AgileBits Inc.</string>
 	<key>display_name</key>
-	<string>Mozilla Thunderbird</string>
+	<string>1Password</string>
 	<key>installer_item_hash</key>
-	<string>67120a0b4e97a973302720121d936589d113adf82996be0a99128cd7d9f3cca3</string>
+	<string>90c3809b39aa3410a0af85e71028a1f56da7241960bded171bcd87956080cb61</string>
 	<key>installer_item_location</key>
-	<string>apps/thunderbird/Thunderbird-38.3.0.dmg</string>
+	<string>apps/1Password-5.4.1.dmg</string>
 	<key>installer_item_size</key>
-	<integer>68342</integer>
+	<integer>40573</integer>
 	<key>installer_type</key>
 	<string>copy_from_dmg</string>
 	<key>installs</key>
 	<array>
 		<dict>
 			<key>CFBundleIdentifier</key>
-			<string>org.mozilla.thunderbird</string>
+			<string>com.agilebits.onepassword4</string>
 			<key>CFBundleName</key>
-			<string>Thunderbird</string>
+			<string>1Password 5</string>
 			<key>CFBundleShortVersionString</key>
-			<string>38.3.0</string>
+			<string>5.4.1</string>
 			<key>CFBundleVersion</key>
-			<string>38.3.0</string>
+			<string>541003</string>
 			<key>minosversion</key>
-			<string>10.6.0</string>
+			<string>10.10</string>
 			<key>path</key>
-			<string>/Applications/Thunderbird.app</string>
+			<string>/Applications/1Password 5.app</string>
 			<key>type</key>
 			<string>application</string>
 			<key>version_comparison_key</key>
@@ -63,20 +68,22 @@
 			<key>destination_path</key>
 			<string>/Applications</string>
 			<key>source_item</key>
-			<string>Thunderbird.app</string>
+			<string>1Password 5.app</string>
 		</dict>
 	</array>
 	<key>minimum_os_version</key>
-	<string>10.6.0</string>
+	<string>10.10</string>
 	<key>name</key>
-	<string>Thunderbird</string>
+	<string>1Password</string>
 	<key>unattended_install</key>
+	<true/>
+	<key>unattended_uninstall</key>
 	<true/>
 	<key>uninstall_method</key>
 	<string>remove_copied_items</string>
 	<key>uninstallable</key>
 	<true/>
 	<key>version</key>
-	<string>38.3.0</string>
+	<string>5.4.1</string>
 </dict>
 </plist>
