--- a/pkgsinfo/apps/GameSalad/GameSalad-1.23.1.plist
+++ b/pkgsinfo/apps/GameSalad/GameSalad-1.23.1.plist
@@ -7,50 +7,49 @@
 		<key>created_by</key>
 		<string>aanklewicz</string>
 		<key>creation_date</key>
-		<date>2015-10-05T18:04:23Z</date>
+		<date>2015-10-22T13:09:49Z</date>
 		<key>munki_version</key>
 		<string>2.3.1.2535</string>
 		<key>os_version</key>
-		<string>10.10.5</string>
+		<string>10.11</string>
 	</dict>
 	<key>autoremove</key>
 	<false/>
 	<key>catalogs</key>
 	<array>
 		<string>testing</string>
-		<string>production</string>
 	</array>
 	<key>category</key>
-	<string>Email</string>
+	<string>Development</string>
 	<key>description</key>
-	<string>Mozilla Thunderbird is a free and open source mail client.</string>
+	<string>If you want to make games, what are you waiting for? With GameSalad Creator you can learn the basics and start making games in about an hour. That’s right. You can make your first game in about an hour.</string>
 	<key>developer</key>
-	<string>Mozilla</string>
+	<string>GameSalad Inc.</string>
 	<key>display_name</key>
-	<string>Mozilla Thunderbird</string>
+	<string>GameSalad</string>
 	<key>installer_item_hash</key>
-	<string>67120a0b4e97a973302720121d936589d113adf82996be0a99128cd7d9f3cca3</string>
+	<string>7dc668dd8dc0ce509f315b7f31c83cf258201b5af829ede8d65bfa425d053bd6</string>
 	<key>installer_item_location</key>
-	<string>apps/thunderbird/Thunderbird-38.3.0.dmg</string>
+	<string>apps/GameSalad/GameSalad-1.23.1.dmg</string>
 	<key>installer_item_size</key>
-	<integer>68342</integer>
+	<integer>31597</integer>
 	<key>installer_type</key>
 	<string>copy_from_dmg</string>
 	<key>installs</key>
 	<array>
 		<dict>
 			<key>CFBundleIdentifier</key>
-			<string>org.mozilla.thunderbird</string>
+			<string>com.gendaigames.GameSalad</string>
 			<key>CFBundleName</key>
-			<string>Thunderbird</string>
+			<string>GameSalad</string>
 			<key>CFBundleShortVersionString</key>
-			<string>38.3.0</string>
+			<string>1.23.1</string>
 			<key>CFBundleVersion</key>
-			<string>38.3.0</string>
+			<string>1.23.1</string>
 			<key>minosversion</key>
-			<string>10.6.0</string>
+			<string>10.7.0</string>
 			<key>path</key>
-			<string>/Applications/Thunderbird.app</string>
+			<string>/Applications/GameSalad.app</string>
 			<key>type</key>
 			<string>application</string>
 			<key>version_comparison_key</key>
@@ -63,13 +62,13 @@
 			<key>destination_path</key>
 			<string>/Applications</string>
 			<key>source_item</key>
-			<string>Thunderbird.app</string>
+			<string>GameSalad.app</string>
 		</dict>
 	</array>
 	<key>minimum_os_version</key>
-	<string>10.6.0</string>
+	<string>10.7.0</string>
 	<key>name</key>
-	<string>Thunderbird</string>
+	<string>GameSalad</string>
 	<key>unattended_install</key>
 	<true/>
 	<key>uninstall_method</key>
@@ -77,6 +76,6 @@
 	<key>uninstallable</key>
 	<true/>
 	<key>version</key>
-	<string>38.3.0</string>
+	<string>1.23.1</string>
 </dict>
 </plist>
