--- a/pkgsinfo/apps/Skype-7.14.0.301.plist
+++ b/pkgsinfo/apps/Skype-7.14.0.301.plist
@@ -7,11 +7,11 @@
 		<key>created_by</key>
 		<string>aanklewicz</string>
 		<key>creation_date</key>
-		<date>2015-10-05T18:04:23Z</date>
+		<date>2015-10-22T12:57:16Z</date>
 		<key>munki_version</key>
 		<string>2.3.1.2535</string>
 		<key>os_version</key>
-		<string>10.10.5</string>
+		<string>10.11</string>
 	</dict>
 	<key>autoremove</key>
 	<false/>
@@ -21,40 +21,38 @@
 		<string>production</string>
 	</array>
 	<key>category</key>
-	<string>Email</string>
+	<string>Communication</string>
 	<key>description</key>
-	<string>Mozilla Thunderbird is a free and open source mail client.</string>
+	<string>Calling, seeing, messaging and sharing with others – wherever they are.</string>
 	<key>developer</key>
-	<string>Mozilla</string>
+	<string>Microsoft</string>
 	<key>display_name</key>
-	<string>Mozilla Thunderbird</string>
+	<string>Skype</string>
 	<key>installer_item_hash</key>
-	<string>67120a0b4e97a973302720121d936589d113adf82996be0a99128cd7d9f3cca3</string>
+	<string>4a082ad20a81466a17cc42c33ea5eb5ac363ed2681a4d01788cf8bc1bb1d9abb</string>
 	<key>installer_item_location</key>
-	<string>apps/thunderbird/Thunderbird-38.3.0.dmg</string>
+	<string>apps/Skype-7.14.0.301.dmg</string>
 	<key>installer_item_size</key>
-	<integer>68342</integer>
+	<integer>39705</integer>
 	<key>installer_type</key>
 	<string>copy_from_dmg</string>
 	<key>installs</key>
 	<array>
 		<dict>
 			<key>CFBundleIdentifier</key>
-			<string>org.mozilla.thunderbird</string>
-			<key>CFBundleName</key>
-			<string>Thunderbird</string>
+			<string>com.skype.skype</string>
 			<key>CFBundleShortVersionString</key>
-			<string>38.3.0</string>
+			<string>7.14</string>
 			<key>CFBundleVersion</key>
-			<string>38.3.0</string>
+			<string>7.14.0.301</string>
 			<key>minosversion</key>
-			<string>10.6.0</string>
+			<string>10.9</string>
 			<key>path</key>
-			<string>/Applications/Thunderbird.app</string>
+			<string>/Applications/Skype.app</string>
 			<key>type</key>
 			<string>application</string>
 			<key>version_comparison_key</key>
-			<string>CFBundleShortVersionString</string>
+			<string>CFBundleVersion</string>
 		</dict>
 	</array>
 	<key>items_to_copy</key>
@@ -63,13 +61,13 @@
 			<key>destination_path</key>
 			<string>/Applications</string>
 			<key>source_item</key>
-			<string>Thunderbird.app</string>
+			<string>Skype.app</string>
 		</dict>
 	</array>
 	<key>minimum_os_version</key>
-	<string>10.6.0</string>
+	<string>10.9</string>
 	<key>name</key>
-	<string>Thunderbird</string>
+	<string>Skype</string>
 	<key>unattended_install</key>
 	<true/>
 	<key>uninstall_method</key>
@@ -77,6 +75,6 @@
 	<key>uninstallable</key>
 	<true/>
 	<key>version</key>
-	<string>38.3.0</string>
+	<string>7.14.0.301</string>
 </dict>
 </plist>
